# crelm

./: .gitignore  LICENSE  README.md  __main__.py  pyproject.toml
crelm/: __init__.py  factory.py  libcrelm.py  makeheaders.c  makeheaders_crelm.c  tube.py
examples/: add2.py  hello_world.py  hello_world_text.py  infinite_series.py  pi.c  pi.h  pi.py  requirements.txt
src/: crelm.py
tests/: factory_tests.py  hello_world.c  hello_world.py  infinite_series.py  leibniz.c  leibniz.h  leibniz.py  libcrelm_tests.py  pi.c  pi.h  pi.py  test.py  tube_tests.py
