[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crelm"
version = "0.0.12"
authors = [
  { name="WideOpenTech", email="foss@wideopentech.co.uk" },
]
description = "Utility that automates turning simple C classes into Python objects"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wideopentech-public/crelm"
"Bug Tracker" = "https://github.com/wideopentech-public/crelm/issues"